--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,8 @@
   <meta charset="utf-8">
   <title>FreelanceCampFe</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" type="text/css" href="http://v4-alpha.getbootstrap.com/dist/css/bootstrap.min.css" />
 </head>
 <body>
   <app>Loading Application....</app>
