--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <title>FreelanceCampFe</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="http://v4-alpha.getbootstrap.com/dist/css/bootstrap.min.css" />
 </head>
 <body>
